Everything as it stands

--- a/academic/index.html
+++ b/academic/index.html
@@ -39,11 +39,15 @@
 
         <h2>Slides and Notes</h2>
         <ul>
+            <li><a href="notes/muri2020.pdf" target="_blank">A Type Theory for Parameterised Spectra</a>, focusing on the type theory. CMU, March 2020 </li>
+            <li><a href="notes/proposal.pdf" target="_blank">A Type Theory for Parameterised Spectra</a>, starting from scratch, no type theory background. Wesleyan University, February 2020</li>
             <li><a href="notes/cgt.txt" target="_blank">A Whirlwind Tour of Combinatorial Games in Haskell</a></li>
         </ul>
 
         <h2>Teaching</h2>
         <ul>
+            <li>Spring 2020: TA for COMP212, Functional Programming</li>
+            <li>Fall 2020: TA for COMP301, Automata Theory and Formal Languages</li>
             <li>Fall 2018: TA for <a href="https://moodle1819.wesleyan.edu/course/view.php?id=6195">COMP112</a>, Introduction to Programming</li>
             <li>Spring 2018: Lecturer for MATH118, Introductory Calculus II: Integration and Its Applications</li>
             <li>Spring 2017: TA for COMP312, Algorithms and Complexity</li>
