More academic updates

--- a/academic/index.html
+++ b/academic/index.html
@@ -50,25 +50,48 @@
           other things.</p>
         <a href="https://github.com/mvr/at">[code]</a>
 
-        <h4>Symmetric CatForce</h4>
-        <p>A search program for interesting patterns in Conway's Game
-        of Life, written in C++. Similar
-        to <a href="https://github.com/ceebo/ptbsearch">ptbsearch</a>
-        but much faster. Has been used to find
-        a <a href="https://conwaylife.com/wiki/74P34">huge</a>
-        <a href="https://conwaylife.com/wiki/84P199">number</a>
-        <a href="https://conwaylife.com/wiki/P84_honey_farm_hassler">of</a>
-        <a href="https://conwaylife.com/wiki/P129_R-pentomino_hassler">interesting</a>
-        <a href="https://conwaylife.com/wiki/108P59">oscillators</a>.</p>
+        <!-- <h4>Symmetric CatForce</h4> -->
+        <!-- <p>A search program for interesting patterns in Conway's Game -->
+        <!-- of Life, written in C++. Similar -->
+        <!-- to <a href="https://github.com/ceebo/ptbsearch">ptbsearch</a> -->
+        <!-- but much faster. Has been used to find -->
+        <!-- a <a href="https://conwaylife.com/wiki/74P34">huge</a> -->
+        <!-- <a href="https://conwaylife.com/wiki/84P199">number</a> -->
+        <!-- <a href="https://conwaylife.com/wiki/P84_honey_farm_hassler">of</a> -->
+        <!-- <a href="https://conwaylife.com/wiki/P129_R-pentomino_hassler">interesting</a> -->
+        <!-- <a href="https://conwaylife.com/wiki/108P59">oscillators</a>.</p> -->
 
-        <p>Originally based
-        on <a href="https://github.com/simsim314/CatForce">CatForce</a>,
-        but very little original code remains.</p>
+        <!-- <p>Originally based -->
+        <!-- on <a href="https://github.com/simsim314/CatForce">CatForce</a>, -->
+        <!-- but very little original code remains.</p> -->
 
-        <a href="https://github.com/mvr/CatForce/tree/depth-first">[code]</a>
+        <!-- <a href="https://github.com/mvr/CatForce/tree/depth-first">[code]</a> -->
 
         <h2>Papers and Preprints</h2>
         <ol>
+            <li value="8">
+              <strong>Learners are Almost Compact Closed</strong>, <br>
+              <a href="https://oxford24.github.io/">ACT 2024</a>, June 2024. <br>
+              <a href="https://oxford24.github.io/assets/act-papers/39_learners_are_almost_free_compa.pdf">[pdf]</a>
+            </li>
+
+            <li value="7">
+                <strong>A Type Theory with a Tiny Object</strong>, <br>
+                2024.<br>
+                <a href="http://arxiv.org/abs/2403.01939">[arXiv:2403.01939]</a>
+            </li>
+
+            <li value="6">
+                <strong>Conway's Game of Life is Omniperiodic</strong>, <br>
+                with Nico Brown, Carson Cheng, Tanner Jacobi, Maia Karpovich, Matthias Merzenich and David Raucci. <br>
+                2023.<br>
+                <a href="https://arxiv.org/abs/2312.02799">[arXiv:2312.02799]</a>
+                <a href="https://www.quantamagazine.org/maths-game-of-life-reveals-long-sought-repeating-patterns-20240118/">[quanta]</a>
+<!-- https://www.discovermagazine.com/the-sciences/mathematicians-prove-the-omniperiodicity-of-conways-game-of-life -->
+<!-- https://www.newscientist.com/article/2407617-decades-old-mathematical-mystery-about-the-game-of-life-finally-solved/ -->
+<!-- https://www.lemonde.fr/sciences/article/2024/02/08/mathematiques-une-vieille-conjecture-du-jeu-de-la-vie-resolue-par-des-amateurs_6215446_1650684.html -->
+            </li>
+
             <li value="5">
                 <strong>Commuting Cohesions</strong>, <br>
                 with David Jaz Myers. <br>
@@ -110,6 +133,18 @@
 
         <h2>Talks</h2>
         <ul>
+            <li><strong>Learners are Almost Compact Closed</strong>.
+                <a href="https://oxford24.github.io/">ACT 2024</a>, June 2024. <br>
+                <a href="slides/act2024.pdf">[slides]</a>
+            </li>
+            <li><strong>Tiny Types</strong>.
+                <a href="https://nyuad.nyu.edu/en/events/2024/april/homotopy-type-theory-and-computing.html">Running HoTT in Abu Dhabi</a>, April 2024. <br>
+                <a href="slides/running2024.pdf">[slides]</a>
+            </li>
+            <li><strong>Linear HoTT and Quipper</strong>.
+                <a href="https://nyuad.nyu.edu/en/events/2024/april/homotopy-type-theory-and-computing.html">Running HoTT in Abu Dhabi</a>, April 2024. <br>
+                <a href="slides/better2024.pdf">[slides]</a>
+            </li>
             <li><strong>Commuting Cohesions</strong>.
                 <a href="https://hott.github.io/HoTT-2023/">HoTT 2023</a>, May 2023. <br>
                 <a href="slides/hott2023.pdf">[slides]</a>
