--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Home - Introduction to Cubical Type Theory in Agda</title>
+        <title>Home - Introduction to Homotopy Type Theory in Cubical Agda</title>
 
 
         <!-- Custom HTML head -->
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item affix "><a href="index.html" class="active">Home</a></li><li class="chapter-item affix "><a href="INSTALLING_AGDA.html">Installing Agda</a></li><li class="chapter-item affix "><a href="USING_AGDA.html">Using Agda</a></li><li class="chapter-item affix "><li class="part-title">Type Theory</li><li class="chapter-item "><a href="1--Type-Theory.1-1--Types-and-Functions.html">1: Types and Functions</a></li><li class="chapter-item "><a href="1--Type-Theory.1-2--Inductive-Types.html">2: Inductive Types</a></li><li class="chapter-item "><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html">3: Universes and More Inductive Types</a></li><li class="chapter-item "><a href="1--Type-Theory.1-X--Record-Types-and-Copatterns.html">X: Record Types and Copatterns</a></li><li class="chapter-item "><a href="1--Type-Theory.1-4--Propositions-as-Types.html">4: Propositions as Types</a></li><li class="chapter-item affix "><li class="part-title">Paths and Identifications</li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-1--Paths.html">1: Paths</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html">2: Equivalences and Path Algebra</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-3--Substitution-and-J.html">3: Substitution and J</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-4--Composition-and-Filling.html">4: Composition and Filling</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-5--Transport.html">5: Transport</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-6--Univalence.html">6: Univalence</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-7--Propositions.html">7: Propositions</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-8--Sets.html">8: Sets</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-9--Contractible-Maps.html">9: Contractible Maps</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-10--Higher-Types.html">10: Higher Types</a></li><li class="chapter-item affix "><li class="part-title">Topics</li><li class="chapter-item "><a href="3--Structures.3-1--Structure-Identity-Principle.html">1: The Structure Identity Principle</a></li><li class="chapter-item "><a href="3--Structures.3-2--Modalities.html">2: Modalities</a></li><li class="chapter-item "><a href="3--Structures.3-3--Constructive-Logic.html">3: Constructive Logic</a></li><li class="spacer"></li><li class="chapter-item affix "><a href="Library.Primitive.html">Primitives</a></li><li class="chapter-item affix "><a href="Library.Prelude.html">Prelude</a></li><li class="chapter-item affix "><a href="Library.Univalence.html">Univalence</a></li><li class="chapter-item affix "><a href="UNICODE_DICTIONARY.html">Unicode Dictionary</a></li><li class="spacer"></li><li class="chapter-item affix "><a href="ACKNOWLEDGEMENTS.html">Acknowledgements</a></li></ol>
+                <ol class="chapter"><li class="chapter-item affix "><a href="index.html" class="active">Home</a></li><li class="chapter-item affix "><a href="INSTALLING_AGDA.html">Installing Agda</a></li><li class="chapter-item affix "><a href="USING_AGDA.html">Using Agda</a></li><li class="chapter-item affix "><li class="part-title">Type Theory</li><li class="chapter-item "><a href="1--Type-Theory.1-1--Types-and-Functions.html">1.1: Types and Functions</a></li><li class="chapter-item "><a href="1--Type-Theory.1-2--Inductive-Types.html">1.2: Inductive Types</a></li><li class="chapter-item "><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html">1.3: Universes and More Inductive Types</a></li><li class="chapter-item "><a href="1--Type-Theory.1-4--Record-Types-and-Copatterns.html">1.4: Record Types and Copatterns</a></li><li class="chapter-item "><a href="1--Type-Theory.1-5--Propositions-as-Types.html">1.5: Propositions as Types</a></li><li class="chapter-item affix "><li class="part-title">Paths and Identifications</li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-1--Paths.html">2.1: Paths</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html">2.2: Equivalences and Path Algebra</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-3--Substitution-and-J.html">2.3: Substitution and J</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-4--Composition-and-Filling.html">2.4: Composition and Filling</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-5--Transport.html">2.5: Transport</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-6--Univalence.html">2.6: Univalence</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-7--Propositions.html">2.7: Propositions</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-8--Sets.html">2.8: Sets</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-9--Contractible-Maps.html">2.9: Contractible Maps</a></li><li class="chapter-item affix "><li class="part-title">Topics</li><li class="chapter-item "><a href="3--Topics.3-1--Structure-Identity-Principle.html">3.1: The Structure Identity Principle</a></li><li class="chapter-item "><a href="3--Topics.3-2--Modalities.html">3.2: Modalities</a></li><li class="chapter-item "><a href="3--Topics.3-3--Constructive-Logic.html">3.3: Constructive Logic</a></li><li class="spacer"></li><li class="chapter-item affix "><a href="Library.Primitive.html">Primitives</a></li><li class="chapter-item affix "><a href="Library.Prelude.html">Prelude</a></li><li class="chapter-item affix "><a href="Library.Univalence.html">Univalence</a></li><li class="chapter-item affix "><a href="UNICODE_DICTIONARY.html">Unicode Dictionary</a></li><li class="spacer"></li><li class="chapter-item affix "><a href="ACKNOWLEDGEMENTS.html">Acknowledgements</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -114,7 +114,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Introduction to Cubical Type Theory in Agda</h1>
+                    <h1 class="menu-title">Introduction to Homotopy Type Theory in Cubical Agda</h1>
 
                     <div class="right-buttons">
                         <a href="https://github.com/CQTS/introduction-to-cubical" title="Git repository" aria-label="Git repository">
@@ -147,19 +147,80 @@
                 <div id="content" class="content">
                   <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h1 id="introduction-to-cubical-type-theory-in-agda"><a class="header" href="#introduction-to-cubical-type-theory-in-agda">Introduction to Cubical Type Theory in Agda</a></h1>
-<p>by David Jaz Myers and Mitchell Riley, with contributions from Wen
-Rahme and Zyad Yasser Hassan.</p>
-<p>Supported by Tamkeen under the NYUAD Research Institute grant <code>CG008</code>.</p>
+<h1 id="introduction-to-homotopy-type-theory-in-cubical-agda"><a class="header" href="#introduction-to-homotopy-type-theory-in-cubical-agda">Introduction to Homotopy Type Theory in Cubical Agda</a></h1>
+<p><em>by David Jaz Myers and Mitchell Riley, with contributions from Wen
+Rahme and Zyad Yasser Hassan. Supported by <a href="https://www.tamkeenuae.com/projects/nyuad.html">Tamkeen</a> under the <a href="https://nyuad.nyu.edu/en/research/faculty-labs-and-projects/cqts.html">NYUAD
+Research Institute</a> grant <code>CG008</code>.</em></p>
+<p>This course teaches the fundamentals of <a href="https://homotopytypetheory.org/">Homotopy Type Theory</a> through
+hands-on experience with the <a href="https://wiki.portal.chalmers.se/agda/pmwiki.php">Agda</a> proof assistant and its <a href="https://agda.readthedocs.io/en/latest/language/cubical.html">cubical</a>
+features.</p>
+<p>Homotopy Type Theory type systems whose types are interpreted as
+spaces that can have higher dimensional structure, rather than mere
+sets or discrete collections of elements. In ordinary mathematics the
+notion of space is defined from more basic building blocks, but in
+HoTT, all constructions that we can perform have an intrinsic spacial
+nature. One way to view HoTT is as an alternative foundation for
+mathematics where everything is “natively homotopical”.</p>
+<p>A type system is much like a programming language, and as with any
+programming language, computer tools can help us write our work and
+check its correctness. Throughout these notes, we will be using the
+programming language and proof assistant called Agda. Agda lets us
+develop our proofs interactively: at each step, Agda keeps track of
+what we have done and what part of the argument needs to be handled
+next.</p>
+<p>In the first versions of HoTT, the higher-dimensional structure of
+types is made accessible by the <a href="https://ncatlab.org/nlab/show/univalence+axiom">univalence axiom</a>, which explains
+what it means for two types to be connected by an equality. This axiom
+is left as an unproven assumption, so any construction that uses it
+may become “stuck” when evaluated and not completely reduce to an
+answer. This is unsatisfying: we have a programming language where not
+every program that promises to return an integer will actually produce
+an explicit number when evaluated.</p>
+<p>Cubical Type Theory is an extension of HoTT whose central achievement
+is a computational interpretation of this univalence axiom: the
+univalence axiom becomes a <em>theorem</em> that has computational content,
+and programs that use it are guaranteed to not get stuck. In this
+extension, paths are represented as functions from a special
+“interval” type, and higher-dimensional structures — like paths
+between paths — arise as functions from products of intervals,
+forming cubes.</p>
+<p>The course has three parts.</p>
+<ol>
+<li><strong>Part 1:</strong> An introduction to dependent type theory, independent
+of any cubical features or homotopy theory. This covers functions,
+inductive types and pattern matching, records, and the
+“propositions-as-types” paradigm.</li>
+<li><strong>Part 2:</strong> A tutorial on the cubical features of Cubical Agda,
+covering paths, higher inductive types, transport, composition and
+univalence.</li>
+<li><strong>Part 3:</strong> Lectures on topics at the frontier of HoTT research,
+which can be read and completed independently of each other. There
+are currently three topics covered.
+<ul>
+<li><strong>The Structure Identity Principle</strong>, following <a href="https://dl.acm.org/doi/10.1145/3434293">Angiuli,
+Cavallo, Mörtberg and Zeuner</a></li>
+<li><strong>Modalities</strong>, following <a href="https://lmcs.episciences.org/6015">Rijke, Shulman and Spitters</a></li>
+<li><strong>Constructive Logic</strong>, following ?</li>
+</ul>
+</li>
+</ol>
 <h2 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h2>
-<p>Clone or download <a href="https://github.com/CQTS/introduction-to-cubical">this repository</a> and open the file</p>
+<p>To edit Agda files, you will need to install Agda and an editor that
+supports <code>agda-mode</code>: currently that is either VSCode or Emacs.
+Detailed installation instructions are given
+<a href="INSTALLING_AGDA.html">here</a>.</p>
+<p>Once your editor is set up, clone or download <a href="https://github.com/CQTS/introduction-to-cubical">this repository</a> and
+open the file</p>
 <pre><code>lectures/1--Type-Theory/1-1--Types-and-Functions.lagda.md 
 </code></pre>
 <p>in your editor to get started.</p>
-<p>To edit Agda files, you will need to install Agda and an editor that
-supports <code>agda-mode</code>: currently that is either VSCode or Emacs.
-Detailed instructions are given <a href="INSTALLING_AGDA.html">here</a>.</p>
-<h2 id="why-another-agda-course"><a class="header" href="#why-another-agda-course">Why another Agda Course?</a></h2>
+<div class="warning">
+<p><span class="warning-label">Caution:</span>
+The notes are intended to be read either on the website or in your
+editor. Reading directly on GitHub is not recommended; the formatting
+and code highlighting does not work correctly.</p>
+</div>
+<h2 id="why-another-agda-course"><a class="header" href="#why-another-agda-course">Why Another Agda Course?</a></h2>
 <p>I don’t know, but too much cost has been sunk to stop now.</p>
 <h2 id="goals-of-this-course"><a class="header" href="#goals-of-this-course">Goals of this Course</a></h2>
 <p>These notes were written with the following goals in mind.</p>
@@ -186,16 +247,20 @@ believe that the topics lectures in Part 3 will get them there.</li>
 <p>On the other hand, we are not concerned with any of the following
 goals. We:</p>
 <ul>
-<li><strong>Don’t stay compatible with other libraries</strong>: We use different names
-and slightly different definitions to existing Agda libraries,
-whenever that improves readability of the text.</li>
+<li><strong>Don’t cover implementation details</strong>: We consider Cubical Type
+Theory mostly as a background theory in which to teach Homotopy Type
+Theory, in particular, we do not discuss cubical subtypes and
+filling in the maximum possible generality.</li>
+<li><strong>Don’t stay compatible with other Agda libraries</strong>: We use
+different names and different definitions to existing Agda
+libraries, whenever this improves readability.</li>
 <li><strong>Don’t showcase Agda’s features</strong>: We don’t discuss Agda’s powerful
-module system, typeclasses, modalities, reflection, anything not
+modules, typeclasses, modalities, reflection faculties; anything not
 related to Agda’s cubical features.</li>
-<li><strong>Don’t optimise performance</strong>: The definitions we use were not chosen
-with either type-checking or normalisation performance in mind. In
-some places much faster choices are available, but were avoided for
-being more complex, or for sequencing reasons.</li>
+<li><strong>Don’t optimise performance</strong>: The definitions we use are not
+chosen with either type-checking or normalisation performance in
+mind. In some places faster options are available, but were avoided
+for being more complex or for sequencing reasons.</li>
 </ul>
 <h2 id="license"><a class="header" href="#license">License</a></h2>
 <p>???</p>
@@ -203,19 +268,19 @@ being more complex, or for sequencing reasons.</li>
 <p>mvrnote: For experts</p>
 <ul>
 <li>We use biinvertible map for equivalence</li>
-<li><code class="Agda"><a href="2--Paths-and-Identifications.2-9--Contractible-Maps.html#2985" class="Function">fiber</a></code> has the path flipped to usual</li>
-<li><code class="Agda"><a href="2--Paths-and-Identifications.2-4--Composition-and-Filling.html#33718" class="Function">∘e</a></code> i.e. <code>compEquiv</code> uses non-diagrammatic order</li>
-<li>We don’t introduce or use cubical subtypes</li>
+<li><code class="Agda"><a href="2--Paths-and-Identifications.2-9--Contractible-Maps.html#2656" class="Function">fiber</a></code> has the path flipped to usual</li>
+<li><code class="Agda"><a href="2--Paths-and-Identifications.2-4--Composition-and-Filling.html#33713" class="Function">∘e</a></code> i.e. <code>compEquiv</code> uses non-diagrammatic order</li>
+<li>We don’t go into detail on cubical subtypes</li>
 <li>Consequently, we don’t prove <code>hfill</code> in general, just the special
 cases that we need</li>
-<li>The type used in <code class="Agda"><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html#1936" class="Function">idfun</a></code> is implicit</li>
-<li><code class="Agda"><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html#17504" class="Function">→-map-≃</a></code> takes the domain equivalence flipped to avoid some path
+<li>The type used in <code class="Agda"><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html#2195" class="Function">idfun</a></code> is implicit</li>
+<li><code class="Agda"><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html#18156" class="Function">→-map-≃</a></code> takes the domain equivalence flipped to avoid some path
 algebra, letting us introduce it earlier</li>
-<li>We use <code class="Agda"><a href="1--Type-Theory.1-2--Inductive-Types.html#7820" class="Datatype">⊤</a></code> and <code class="Agda"><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html#6064" class="Datatype">∅</a></code> for the unit type and empty type respectively</li>
+<li>We use <code class="Agda"><a href="1--Type-Theory.1-2--Inductive-Types.html#8438" class="Datatype">⊤</a></code> and <code class="Agda"><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html#6323" class="Datatype">∅</a></code> for the unit type and empty type respectively</li>
 <li>We use “1-lab style” <code class="Agda"><a href="Library.Prelude.html#650" class="Function">hcomp</a></code>, so that the bottom face is provided
-with the partial element.</li>
+as part of the partial element.</li>
 <li><code>FunctionEquivStr</code> doesn’t use implicit arguments, so we don’t
-have to fuss around with an implicit version of <code class="Agda"><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html#18375" class="Function">Π-map-cod≃</a></code></li>
+have to fuss around with an implicit version of <code class="Agda"><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html#19027" class="Function">Π-map-cod≃</a></code></li>
 </ul>
 
                   </main>
@@ -226,6 +291,22 @@ have to fuss around with an implicit version of <code class="Agda"><a href="2--P
             </div>
         </div>
 
+        <!-- Livereload script (if served using the cli tool) -->
+        <script>
+            const wsProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+            const wsAddress = wsProtocol + "//" + location.host + "/" + "__livereload";
+            const socket = new WebSocket(wsAddress);
+            socket.onmessage = function (event) {
+                if (event.data === "reload") {
+                    socket.close();
+                    location.reload();
+                }
+            };
+
+            window.onbeforeunload = function() {
+                socket.close();
+            }
+        </script>
 
 
         <script src="elasticlunr.min.js"></script>
