--- a/index.html
+++ b/index.html
@@ -154,28 +154,28 @@ Research Institute</a> grant <code>CG008</code>.</em></p>
 <p>This course teaches the fundamentals of <a href="https://homotopytypetheory.org/">Homotopy Type Theory</a> through
 hands-on experience with the <a href="https://wiki.portal.chalmers.se/agda/pmwiki.php">Agda</a> proof assistant and its <a href="https://agda.readthedocs.io/en/latest/language/cubical.html">cubical</a>
 features.</p>
-<p>Homotopy Type Theory type systems whose types are interpreted as
-spaces that can have higher dimensional structure, rather than mere
-sets or discrete collections of elements. In ordinary mathematics the
-notion of space is defined from more basic building blocks, but in
-HoTT, all constructions that we can perform have an intrinsic spacial
-nature. One way to view HoTT is as an alternative foundation for
-mathematics where everything is “natively homotopical”.</p>
+<p>Homotopy Type Theory (HoTT) is a type system whose types behave like
+spaces that can have higher dimensional features, rather than mere
+sets or collections of discrete elements. Ordinary mathematics builds
+the notion of space from more basic building blocks, but in HoTT, all
+constructions that we perform have an intrinsic spacial nature. One
+way to view HoTT is as an alternative foundation for mathematics where
+everything is “natively homotopical”.</p>
 <p>A type system is much like a programming language, and as with any
 programming language, computer tools can help us write our work and
-check its correctness. Throughout these notes, we will be using the
-programming language and proof assistant called Agda. Agda lets us
-develop our proofs interactively: at each step, Agda keeps track of
-what we have done and what part of the argument needs to be handled
-next.</p>
+check its correctness. Throughout these notes, we will be using
+<a href="https://wiki.portal.chalmers.se/agda/pmwiki.php">Agda</a>, a programming language with an associated “proof assistant”.
+Agda lets us develop our proofs interactively: at each step, Agda
+keeps track of what we have done and what part of the argument needs
+to be dealt with next.</p>
 <p>In the first versions of HoTT, the higher-dimensional structure of
 types is made accessible by the <a href="https://ncatlab.org/nlab/show/univalence+axiom">univalence axiom</a>, which explains
-what it means for two types to be connected by an equality. This axiom
-is left as an unproven assumption, so any construction that uses it
-may become “stuck” when evaluated and not completely reduce to an
-answer. This is unsatisfying: we have a programming language where not
-every program that promises to return an integer will actually produce
-an explicit number when evaluated.</p>
+what it means for two types to be equal. This axiom is provided as an
+unproven assumption, so any construction that uses it may become
+“stuck” when evaluated and not completely reduce to an answer. This is
+unsatisfying: we have a programming language where not every program
+that promises to produce an integer will actually produce an explicit
+number when evaluated.</p>
 <p>Cubical Type Theory is an extension of HoTT whose central achievement
 is a computational interpretation of this univalence axiom: the
 univalence axiom becomes a <em>theorem</em> that has computational content,
@@ -185,9 +185,9 @@ extension, paths are represented as functions from a special
 between paths — arise as functions from products of intervals,
 forming cubes.</p>
 <p>The course has three parts.</p>
-<ol>
-<li><strong>Part 1:</strong> An introduction to dependent type theory, independent
-of any cubical features or homotopy theory. This covers functions,
+<ul>
+<li><strong>Part 1:</strong> An introduction to dependent type theory, independent of
+any cubical features or homotopy theory. This covers functions,
 inductive types and pattern matching, records, and the
 “propositions-as-types” paradigm.</li>
 <li><strong>Part 2:</strong> A tutorial on the cubical features of Cubical Agda,
@@ -203,7 +203,7 @@ Cavallo, Mörtberg and Zeuner</a></li>
 <li><strong>Constructive Logic</strong>, following ?</li>
 </ul>
 </li>
-</ol>
+</ul>
 <h2 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h2>
 <p>To edit Agda files, you will need to install Agda and an editor that
 supports <code>agda-mode</code>: currently that is either VSCode or Emacs.
