--- a/index.html
+++ b/index.html
@@ -148,9 +148,16 @@
                   <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="introduction-to-homotopy-type-theory-in-cubical-agda"><a class="header" href="#introduction-to-homotopy-type-theory-in-cubical-agda">Introduction to Homotopy Type Theory in Cubical Agda</a></h1>
+<div style="display:flex;">
+<div style="flex: 50%; align-self: center;">
 <p><em>by David Jaz Myers and Mitchell Riley, with contributions from Wen
 Rahme and Zyad Yasser Hassan. Supported by <a href="https://www.tamkeenuae.com/projects/nyuad.html">Tamkeen</a> under the <a href="https://nyuad.nyu.edu/en/research/faculty-labs-and-projects/cqts.html">NYUAD
 Research Institute</a> grant <code>CG008</code>.</em></p>
+</div>
+<div style="flex: 50%;">
+<p><img src="images/cqts.png" alt="CQTS" /></p>
+</div>
+</div>
 <p>This course teaches the fundamentals of <a href="https://homotopytypetheory.org/">Homotopy Type Theory</a> through
 hands-on experience with the <a href="https://wiki.portal.chalmers.se/agda/pmwiki.php">Agda</a> proof assistant and its <a href="https://agda.readthedocs.io/en/latest/language/cubical.html">cubical</a>
 features.</p>
