--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <header id="masthead">
     <h1>Mitchell Riley</h1>
-    <p>A PhD candidate in Mathematics at Wesleyan University.</p><p>I work on type theory, in particular Modal <a href="https://homotopytypetheory.org/">HoTT</a> and synthetic homotopy theory.</p>
+    <p>Postdoc at NYUAD. I work on dependent type theory.</p>
     <p id="links">
         <a href="/projects.html">Projects</a>
         <a href="https://github.com/mvr">Github</a>
-        <a href="https://mvriley.wescreates.wesleyan.edu/">Academic Site</a>
+        <!-- <a href="https://mvriley.wescreates.wesleyan.edu/">Academic Site</a> -->
         <a href="mailto:mitchell.v.riley@gmail.com">mitchell.v.riley@gmail.com</a>
     </p>
 </header>
